turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:57: error: Unmatched closing brace '}' ignored here
}
^