turtleart.lessons.turtleart.Main.HouseMany.scala.code
override def run() {
	def ligneHouse {
	for (i <- 1 to 4) {
	baisseCrayon();
	avance(30);
	droite(30);
	for (i <- 1 to 3) {
		avance(30);
		droite(120.0);
	}
	droite(60);
	avance(30);
	droite(90);
	avance(30);
	droite(90);
	avance(30);
	droite(90);
	leveCrayon();
	droite(90);
	avance(50);
	gauche(90);
	}
	gauche(90);
	avance(200);
	droite(90);
	}

	ligneHouse;
	avance(75);
	for (i <- 1 to 2) {
		avance(30);
		droite(120.0);
	}
	droite(60);
	avance(30);
	droite(90);
	avance(30);
	droite(90);
	avance(30);
	droite(90);
	leveCrayon();
	droite(90);
	avance(200);
	gauche(90);
	}
	gauche(90);
	avance(200);
	droite(90);
	avance(75);
	ligneHouse;
	avance(75);
	
}
